<resources>
    <string name="app_name">Arabic</string>
    <string name="score">Score 0/20</string>
    <string name="question_number">1/20 Question</string>
    <string name="question1_A">Men </string>
    <string name="question1_B">Seniki</string>
    <string name="question1_C">U</string>
    <string name="question1_D">Biz</string>
    <string name="answer_1">Seniki</string>
    <string name="question_2A">Seniki</string>
    <string name="question_2B">Yagona</string>
    <string name="question_2C">Ular</string>
    <string name="question_2D">Mening</string>
    <string name="answer_2">Ular</string>
    <string name="question_3A"> Seniki</string>
    <string name="question_3B">Siz ikkalangiz kabi</string>
    <string name="question_3C">Osha ikkitasi</string>
    <string name="question_3D">U</string>
    <string name="answer_3">U</string>
    <string name="question_4A">Sizning</string>
    <string name="question_4B">Ularning</string>
    <string name="question_4C">Bizning</string>
    <string name="question_4D">Seniki</string>
    <string name="answer_4">Bizning</string>
    <string name="question5_A">Men </string>
    <string name="question5_B">Seniki</string>
    <string name="question5_C">U</string>
    <string name="question5_D">Biz</string>
    <string name="answer_5">Seniki</string>
    <string name="question_6A"> Men</string>
    <string name="question_6B">Siz ikkalangiz kabi</string>
    <string name="question_6C">Osha ikkitasi</string>
    <string name="question_6D">Mening</string>
    <string name="answer_6">Mening</string>
    <string name="question_7A">Seniki</string>
    <string name="question_7B">Yagona</string>
    <string name="question_7C">Ular</string>
    <string name="question_7D">Mening</string>
    <string name="answer_7">Seniki</string>
    <string name="question8_A">Men </string>
    <string name="question8_B">Seniki</string>
    <string name="question8_C">Ular</string>
    <string name="question8_D">Biz</string>
    <string name="answer_8">Ular</string>
    <string name="question9_A">Uning </string>
    <string name="question9_B">Sen</string>
    <string name="question9_C">Ular</string>
    <string name="question9_D">Osha ikkitasi</string>
    <string name="answer_9">Uning</string>
    <string name="question10_A">Uning </string>
    <string name="question10_B">Sen</string>
    <string name="question10_C">Siz ikkalangiz ham</string>
    <string name="question10_D">Osha ikkitasi</string>
    <string name="answer_10">Siz ikkalangiz ham</string>
    <string name="question11_A">Osha ikkitasi </string>
    <string name="question11_B">Seniki</string>
    <string name="question11_C">U</string>
    <string name="question11_D">Biz</string>
    <string name="answer_11">Osha ikkitasi </string>
    <string name="question_12A">Seniki</string>
    <string name="question_12B">Yagona</string>
    <string name="question_12C">U</string>
    <string name="question_12D">Mening</string>
    <string name="answer_12">U</string>
    <string name="question_13A"> Seniki</string>
    <string name="question_13B">Siz ikkalangiz kabi</string>
    <string name="question_13C">Osha ikkitasi</string>
    <string name="question_13D">Biz</string>
    <string name="answer_13">Biz</string>
    <string name="question_14A">Sizning</string>
    <string name="question_14B">Ularning</string>
    <string name="question_14C">Bizning</string>
    <string name="question_14D">Men</string>
    <string name="answer_14">Men</string>
    <string name="question15_A">Men </string>
    <string name="question15_B">Siz</string>
    <string name="question15_C">U</string>
    <string name="question15_D">Biz</string>
    <string name="answer_15">Siz</string>
    <string name="question_16A"> Sen</string>
    <string name="question_16B">Siz ikkalangiz kabi</string>
    <string name="question_16C">Osha ikkitasi</string>
    <string name="question_16D">MEning</string>
    <string name="answer_16">Sen</string>
    <string name="question_17A">Seniki</string>
    <string name="question_17B">Yagona</string>
    <string name="question_17C">Ular</string>
    <string name="question_17D">Mening</string>
    <string name="answer_17">Ular</string>
    <string name="question18_A">Men </string>
    <string name="question18_B">Seniki</string>
    <string name="question18_C">Ular</string>
    <string name="question18_D">U</string>
    <string name="answer_18">U</string>
    <string name="question19_A">Uning </string>
    <string name="question19_B">Sen</string>
    <string name="question19_C">Ular</string>
    <string name="question19_D">Osha ikkitasi</string>
    <string name="answer_19">Sen</string>
    <string name="question20_A">Uning </string>
    <string name="question20_B">Ular</string>
    <string name="question20_C">Siz ikkalangiz ham</string>
    <string name="question20_D">Osha ikkitasi</string>
    <string name="answer_20">Ular</string>
    <string name="question21_A">Kim </string>
    <string name="question21_B">Qachon</string>
    <string name="question21_C">Nima</string>
    <string name="question21_D">Biz</string>
    <string name="answer_21">Qachon</string>
    <string name="question_22A">Kim</string>
    <string name="question_22B">Nimaga</string>
    <string name="question_22C">Ular</string>
    <string name="question_22D">Yaqin</string>
    <string name="answer_22">Kim</string>
    <string name="question_23A"> Qachon(K.z)</string>
    <string name="question_23B">Siz ikkalangiz kabi</string>
    <string name="question_23C">Nima</string>
    <string name="question_23D">...dan</string>
    <string name="answer_23">Nima</string>
    <string name="question_24A">Nechta</string>
    <string name="question_24B">Qaysi</string>
    <string name="question_24C">Kim</string>
    <string name="question_24D">Kabi</string>
    <string name="answer_24">Kabi</string>
    <string name="question25_A">Qayerda </string>
    <string name="question25_B">Shundaymi</string>
    <string name="question25_C">Ularning</string>
    <string name="question25_D">Biz</string>
    <string name="answer_25">Qayerda</string>
    <string name="question_26A"> Nechta</string>
    <string name="question_26B">Siz ikkalangiz kabi</string>
    <string name="question_26C">Nima</string>
    <string name="question_26D">MEning</string>
    <string name="answer_26">Nima</string>
    <string name="question_27A">Agar yoq bolsa</string>
    <string name="question_27B">Yagona</string>
    <string name="question_27C">Ular</string>
    <string name="question_27D">Shundaymi</string>
    <string name="answer_27">Shundaymi</string>
    <string name="questio28_A">Nechta </string>
    <string name="question28_B">Seniki</string>
    <string name="question28_C">Qaysi</string>
    <string name="question28_D">Biz</string>
    <string name="answer_28">Qaysi</string>
    <string name="question29_A">Nimaga</string>
    <string name="question29_B">Sen</string>
    <string name="question29_C">Kim</string>
    <string name="question29_D">Osha ikkitasi</string>
    <string name="answer_29">Nimaga</string>
    <string name="question30_A">Uning </string>
    <string name="question30_B">Agar yoq bolsa</string>
    <string name="question30_C">Siz ikkalangiz ham</string>
    <string name="question30_D">Osha ikkitasi</string>
    <string name="answer_30">Agar yoq bolsa</string>
    <string name="question31_A">Osha ikkitasi </string>
    <string name="question31_B">Seniki</string>
    <string name="question31_C">Oldin</string>
    <string name="question31_D">Biz</string>
    <string name="answer_31">Oldin </string>
    <string name="question_32A">Kim</string>
    <string name="question_32B">Nimaga</string>
    <string name="question_32C">Keyin</string>
    <string name="question_32D">Yaqin</string>
    <string name="answer_32">Keyin</string>
    <string name="question_33A"> Vaqtida</string>
    <string name="question_33B">Siz ikkalangiz kabi</string>
    <string name="question_33C">Nima</string>
    <string name="question_33D">...dan</string>
    <string name="answer_33">Vaqtida</string>
    <string name="question_34A">Nechta</string>
    <string name="question_34B">Qaysi</string>
    <string name="question_34C">Shunday qilip</string>
    <string name="question_34D">Kabi</string>
    <string name="answer_34">Shunday qilip</string>
    <string name="question_35A"> Sen</string>
    <string name="question_35B">Siz ikkalangiz kabi</string>
    <string name="question_35C">Osha ikkitasi</string>
    <string name="question_35D">MEning</string>
    <string name="answer_35">Sen</string>
    <string name="question_36A">Seniki</string>
    <string name="question_36B">Yagona</string>
    <string name="question_36C">Ular</string>
    <string name="question_36D">Mening</string>
    <string name="answer_36">Ular</string>
    <string name="question37_A">Men </string>
    <string name="question37_B">Seniki</string>
    <string name="question37_C">Ular</string>
    <string name="question37_D">U</string>
    <string name="answer_37">U</string>
    <string name="question38_A">Men </string>
    <string name="question38_B">Seniki</string>
    <string name="question38_C">U</string>
    <string name="question38_D">Biz</string>
    <string name="answer_38">Seniki</string>
    <string name="question_39A">Seniki</string>
    <string name="question_39B">Yagona</string>
    <string name="question_39C">Ular</string>
    <string name="question_39D">Mening</string>
    <string name="answer_39">Ular</string>
    <string name="question40_A">Uning </string>
    <string name="question40_B">Agar yoq bolsa</string>
    <string name="question40_C">Nechta</string>
    <string name="question40_D">Osha ikkitasi</string>
    <string name="answer_40">Nechta</string>
    <string name="question41_A">Bir joyda </string>
    <string name="question41_B">...egassi</string>
    <string name="question41_C">Egasi</string>
    <string name="question41_D">Qarindoshlar</string>
    <string name="answer_41">Bir joyda</string>
    <string name="question_42A">Oxshashlik</string>
    <string name="question_42B">Nimaga</string>
    <string name="question_42C">Ammo</string>
    <string name="question_42D">Keyinchalik</string>
    <string name="answer_42">Keyinchalik</string>
    <string name="question_43A"> Qachon(K.z)</string>
    <string name="question_43B">Siz ikkalangiz kabi</string>
    <string name="question_43C">Ammo</string>
    <string name="question_43D">...dan</string>
    <string name="answer_43">Ammo</string>
    <string name="question_44A">Nechta</string>
    <string name="question_44B">Nimaga</string>
    <string name="question_44C">Kim</string>
    <string name="question_44D">Qilmaslik uchun..</string>
    <string name="answer_44">Qilmaslik uchun..</string>
    <string name="question45_A">Egasi </string>
    <string name="question45_B">Shundaymi</string>
    <string name="question45_C">Ularning</string>
    <string name="question45_D">Biz</string>
    <string name="answer_45">Egasi</string>
    <string name="question_46A"> Nechta</string>
    <string name="question_46B">Siz ikkalangiz kabi</string>
    <string name="question_46C">Nima</string>
    <string name="question_46D">MEning</string>
    <string name="answer_46">Nima</string>
    <string name="question_47A">Agar yoq bolsa</string>
    <string name="question_47B">Yagona</string>
    <string name="question_47C">Ular</string>
    <string name="question_47D">Shundaymi</string>
    <string name="answer_47">Shundaymi</string>
    <string name="question48_A">..egasi </string>
    <string name="question48_B">Seniki</string>
    <string name="question48_C">YAgona</string>
    <string name="question48_D">Biz</string>
    <string name="answer_48">..egasi</string>
    <string name="question49_A">Yomonlik</string>
    <string name="question49_B">Sen</string>
    <string name="question49_C">Odamlar egalari</string>
    <string name="selctedoption">SelctedOption</string>
    <string name="correctanswer">CorrectAnswer</string>
</resources>